--- a/XEngine.GfxHAL.D3D12/XEngine.GfxHAL.D3D12.vcxproj.filters
+++ b/XEngine.GfxHAL.D3D12/XEngine.GfxHAL.D3D12.vcxproj.filters
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="XEngine.Render.HAL.D3D12.h" />
     <ClInclude Include="D3D12Helpers.h" />
-    <ClInclude Include="XEngine.Render.HAL.D3D12.Translation.h" />
+    <ClInclude Include="XEngine.GfxHAL.D3D12.h" />
+    <ClInclude Include="XEngine.GfxHAL.D3D12.Translation.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="XEngine.Render.HAL.D3D12.cpp" />
+    <ClCompile Include="XEngine.GfxHAL.D3D12.cpp" />
   </ItemGroup>
 </Project>
