--- a/XEngine.Render.MaterialShaderCompiler/XEngine.Render.MaterialShaderCompiler.vcxproj
+++ b/XEngine.Render.MaterialShaderCompiler/XEngine.Render.MaterialShaderCompiler.vcxproj
@@ -279,7 +279,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XEngine.Render.HAL.ShaderCompiler\XEngine.Render.HAL.ShaderCompiler.vcxproj">
+    <ProjectReference Include="..\XEngine.GfxHAL.ShaderCompiler\XEngine.GfxHAL.ShaderCompiler.vcxproj">
       <Project>{0e31d4f6-c1d4-4a6f-8c42-a0f7b2e4d9d9}</Project>
     </ProjectReference>
     <ProjectReference Include="..\XLib\XLib.vcxproj">
